--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,8 @@
   "editor.rulers": [ 140 ],
   "eslint.enable": true,
   "cSpell.words": [
+    "Andreas",
+    "Ottiger",
     "TWILINE",
     "TWILINEs"
   ]
