--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": false,
   "displayName": "Homebridge TWILINE",
   "name": "homebridge-twiline",
-  "version": "0.1.0",
+  "version": "1.0.0-beta.1",
   "author": "Andreas Ottiger",
   "description": "Access your TWILINE smart home as homekit accessories.",
   "license": "Apache-2.0",
